[package]
name = "snake-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = {version="0.2.7", features=["js"]}
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'Window',
  'CssStyleDeclaration',
  'KeyboardEvent',
]
